[metadata]
name = pymica-martinet101
version = 1.0
author = Martí Climent
author_email = marticlilop@gmail.com
description = Apply mica background to Windows 11 windows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martinet101/pymica/
project_urls =
    Bug Tracker = https://github.com/martinet101/pymica/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src